# xorg__driver__xf86-video-via

./: .gitignore  ChangeLog  configure.ac
man/: Makefile.am  via.man
src/: Makefile.am  via.h  via_accel.c  via_bandwidth.c  via_bios.h  via_cursor.c  via_dga.c  via_dri.c  via_dri.h  via_driver.c  via_driver.h  via_drmclient.h  via_i2c.c  via_id.c  via_id.h  via_memcpy.c  via_memcpy.h  via_memory.c  via_mode.c  via_mode.h  via_priv.h  via_regs.h  via_shadow.c  via_swov.c  via_swov.h  via_vbe.c  via_vgahw.c  via_vgahw.h  via_video.c  via_video.h  via_vt162x.c  via_vt162x.h  via_xvmc.c  via_xvmc.h  via_xvpriv.h
src/xvmc/: Makefile.am  driDrawable.c  viaLowLevel.h  viaXvMC.c  viaXvMCPriv.h
src/xvmc/unichrome/: Makefile.am
src/xvmc/unichromeProA/: Makefile.am  viaLowLevelPro.c
